<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RadioButtonActivity">

    <TextView
        android:id="@+id/question3"
        android:layout_width="271dp"
        android:layout_height="67dp"
        android:padding="@dimen/std_pd"
        android:paddingStart="@dimen/std_pd"
        android:paddingLeft="@dimen/std_pd"
        android:paddingTop="@dimen/std_pd"
        android:paddingEnd="@dimen/std_pd"
        android:paddingRight="@dimen/std_pd"
        android:paddingBottom="@dimen/std_pd"
        android:text="@string/attending"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005" />

    <RadioGroup
        android:id="@+id/radioGroupID"
        android:layout_width="238dp"
        android:layout_height="125dp"
        android:padding="@dimen/std_pd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question3"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/yesID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/noID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no" />

        <RadioButton
            android:id="@+id/maybeID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maybe" />
    </RadioGroup>

    <Button
        android:id="@+id/printBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="239dp"
        android:layout_height="54dp"
        android:layout_marginTop="56dp"
        android:text="@string/submit"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupID"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        android:id="@+id/output"
        android:layout_width="311dp"
        android:layout_height="90dp"
        android:padding="@dimen/std_pd"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/printBtn"
        app:layout_constraintVertical_bias="0.37" />

</androidx.constraintlayout.widget.ConstraintLayout>